@@ -26,6 +26,8 @@
   ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
   POSSIBILITY OF SUCH DAMAGE. */
 
+/* $Id$ */
+
 /*
    ultoa.S
 
@@ -68,11 +70,11 @@ _U(ultoa):
 	push	ZH		; keep &string
 	push	ZL
 	cpi	a_radix, 2	; no radix < 2
-	brlt	conv_finished	; return with \0
+	brlt	99f		; return with \0
 	cpi	a_radix, 37	; no radix > 36
-	brge	conv_finished	; return with \0
+	brge	99f		; return with \0
 	mov	r_radix, a_radix; save radix
-divide_loop:
+1:
 	mov	r18, r_radix	; radix is divisor
 	clr	r19		; remainder of number is dividend
 	clr	r20
@@ -84,9 +86,9 @@ divide_loop:
 	pop	ZH
 	subi	r22, 0xd0	; + '0'
 	cpi	r22, 0x3a	; > '9' ?
-	brlt	L_10
+	brlt	10f
 	subi	r22, 0xd9	; + 'a' - 10 - '0'
-L_10:
+10:
 	st	Z+, r22		; write character to string in reverse order!
 	mov	a_val_lo, r18	; quotient -> dividend
 	mov	a_val_hi, r19
@@ -96,8 +98,8 @@ L_10:
 	sbci	a_val_hi, 0
 	sbci	a_val_hlo, 0
 	sbci 	a_val_hhi,0 	; value == 0 ?
-	brne	divide_loop
-conv_finished:
+	brne	1b
+99:
 	st	Z, __zero_reg__	; terminate string
 	pop	a_val_hlo	; restore &string as return value
 	pop	a_val_hhi
